# docs/api/api_swagger.yaml
@@ -6,6 +6,13 @@ definitions:
         example: '{"tags":["tag1","tag2","tag3"],"peers":[{"id":"abc","username":"abv-l","hostname":"","platform":"Windows","alias":"","tags":["tag1","tag2"],"hash":"hash"}],"tag_colors":"{\"tag1\":4288585374,\"tag2\":4278238420,\"tag3\":4291681337}"}'
         type: string
     type: object
+  api.AgentePayload:
+    properties:
+      agente:
+        type: boolean
+      tecnico:
+        type: string
+    type: object
   api.AuditConnForm:
     properties:
       action:
@@ -638,6 +645,24 @@ paths:
       summary: 标签
       tags:
       - 地址[Personal]
+  /agente:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.AgentePayload'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      security:
+      - token: []
+      summary: agente AI dell'utente
+      tags:
+      - 用户
   /audit:
     put:
       consumes:
